# 202406--personal-blog--diesel

./: .env.example  Cargo.toml  Docker.md  diesel.toml
migrations/2024-06-27-223603_create_posts/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
templates/: index.html  post.html
