[package]
name = "personal-blog--diesel"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
diesel = { version = "2.2.1", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
json = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
tera = "1.20.0"
